refactor: columns remain as strings